[gd_scene load_steps=5 format=3 uid="uid://dgw0aloik2xf"]

[ext_resource type="Script" path="res://Scripts/prop_base.gd" id="1_jm3j3"]
[ext_resource type="PackedScene" uid="uid://dx66r72wkfdli" path="res://Scenes/GUI/caixa_dialogo.tscn" id="2_jn2l4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v4o0w"]
size = Vector2(32, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pmm85"]
size = Vector2(32, 32)

[node name="PropBase" type="StaticBody2D"]
position = Vector2(-16, -16)
collision_layer = 2
collision_mask = 0
script = ExtResource("1_jm3j3")

[node name="Colis√£o" type="CollisionShape2D" parent="."]
position = Vector2(48, 48)
shape = SubResource("RectangleShape2D_v4o0w")

[node name="AreaInteragir" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="AreaInteragir"]
position = Vector2(48, 48)
shape = SubResource("RectangleShape2D_pmm85")
debug_color = Color(0, 0.529412, 0.996078, 0.419608)

[node name="ColorRect" type="ColorRect" parent="AreaInteragir/CollisionShape2D"]
visible = false
offset_left = -16.0
offset_top = -16.0
offset_right = 16.0
offset_bottom = 16.0
color = Color(1, 1, 1, 0.443137)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="CaixaDialogo" parent="CanvasLayer" instance=ExtResource("2_jn2l4")]

[connection signal="area_entered" from="AreaInteragir" to="." method="_on_area_interagir_area_entered"]
[connection signal="area_exited" from="AreaInteragir" to="." method="_on_area_interagir_area_exited"]
